# llm-compressor

./: ++[[@HERE’S*!! WAY TO WATCH AFL Grand Final 2024 LIVE Sdne Swans vs Brisbane Lions STREAMS.md  .MAINTAINERS  .coderabbit.yaml  .coveragerc  .gitignore  .readthedocs.yaml  404.html  CITATION.cff  CNAME  CONTRIBUTING.md  DEVELOPING.md  FILES.md  GREEDY_MULTISCALE_GUIDE.md  INT4_LORA_VLLM_TEST_RESULTS.md  KEY_CONVERSIONS.md  LEARNED_AWQ_IMPLEMENTATION.md  LLM_Compressor_0.9.0.md  MANIFEST.in  Makefile  NOTICE  README.md  RESULTS_VARIATIONAL_MERA.md  SECURITY.md  SESSION_SUMMARY.md  SKILLS_STRUCTURE.md  TROUBLESHOOTING.md  VLLM_INT4_MOE_LORA_INVESTIGATION.md  WAVELET_COMPRESSION_STATUS.md  benchmark_results.md  benchmark_results_v2.md  boundary_mera.py  compress_model.py  compress_tinyllama_actorder.py  convert_config.py  convert_safetensors_keys.py  deepseek_dequantize.py  delete_e2e_models.py  example_column_sparse_recipe.yaml  extract_activations.py  extract_eval_results.py  (+96 more)
.buildkite/: pipeline.yml
.buildkite/gpu-tests/: gpu-tests-A100.yml  gpu-tests-H100.yml  gpu-tests-L4.yml  transformers-tests-A100.yml  transformers-tests-H100.yml  transformers-tests-L4.yml
.buildkite/xpu-tests/: xpu-tests-B60.yml
.claude/skills/: style.md  test.md
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  dependabot.yml  mergify.yml
.github/ISSUE_TEMPLATE/: bug_report.md  bug_report.yaml
.github/scripts/: step-status
.github/workflows/: branch-protection-check.yml  build-and-publish-release-images.yaml  build-container.yml  build-test-publish-nightly.yaml  build-test-release.yaml  build-test.yml  build.yml  claude-security-review.yaml  commit.yaml  dependabot-auto-merge.yml  linkcheck.yml  post-release-nightly-build.yml  quality-check.yaml  ready-label-check.yaml  report.yml  set-comment.yaml  stale.yml  test-check-transformers.yaml  test-check.yaml  test-weekly.yml  test.yml  trigger-all.yml  upload.yml
0.5.1/: 404.html  index.html  sitemap.xml
0.5.1/developer/: index.html
0.5.1/examples/: index.html
0.5.1/getting-started/: index.html
0.5.1/guides/: index.html
0.5.1/search/: search_index.json
TinyLlama-1.1B-Chat-v1.0-fp8/: fp8-config.json  fp8-default-config.json  fp8-default-kv_config.json  recipe.yaml
archive/: COLUMN_SPARSE_README.md  COMPRESSION_SUMMARY.md  CONTRIBUTING.md  GREEDY_MULTISCALE_GUIDE.md  MERA_README.md  analyze_effective_chi.py  binary_mera.py  binary_mera_classical.py  binary_mera_correct.py  binary_mera_fixed.py  binary_mera_tensor.py  debug_init.py  mera_adaptive_chi.py  mera_batch_structured.py  mera_batch_universal.py  mera_chi_sweep_activations.py  mera_chi_sweep_correct.py  mera_hierarchical.py  sweep_thresholds.py  test_chi_caps.py  test_isometry_init.py  test_mera_on_activations.py  test_static_svd_mera.py  test_tiny_mera.py
archive/wavelet/: functional_mps_reyes.py  hidden_states_analysis.py  oneshot_greedy_multiscale.py  plot_energy_spectrum.py  spectrum_analysis.py  wavelet_activations.py  wavelet_mera_mps.py  wavelet_mpo_hybrid.py
benchmarks/: bench_mse_compile.py  bench_mse_eager_baseline.py  profile_mse_steps.py
docker/: Dockerfile  TODO.txt
docs/: .nav.yml  DEVELOPMENT.md  Makefile  README.md  index.md  lora_int4_quickstart.md  observers.md  requirements.txt  save_pretrained.md  schemes.md  vllm_lora_int4_design.md
docs/api/: README.md  index.md
docs/conceptual_guides/: inference_acceleration.md  quantization_schemes.md
docs/developer/: code-of-conduct.md  contributing.md  developing.md  governance.md  index.md
docs/developer-tutorials/: add-modifier.md  add-moe-support.md  add-observer.md  index.md
docs/examples/: index.md
docs/faq/: faq.md
docs/getting-started/: choosing-algo.md  choosing-scheme.md  code_examples_fp8.md  compress.md  deploy.md  faq.md  index.md  install.md  priority_models_fp8.md  why-llmcompressor.md
docs/guides/: README.md  compression_formats.md  compression_schemes.md  distributed_oneshot.md  index.md  memory.md  model_loading.md  observers.md  runtime.md  saving_a_model.md  sequential_onloading.md
docs/key-models/: index.md
docs/lmeval-viewer/: app.js  index.html  style.css
docs/scripts/: copy-example-docs.sh  gen_files.py  zensical_gen_files.py
docs/source/: about.md  conf.py  index.md  index.rst  inferencing-with-vllm.md  installing.md
docs/steps/: choosing-algo.md  choosing-dataset.md  choosing-model.md  choosing-scheme.md  compress.md  deploy.md  (+1 more)
examples/: README.md  bitmask_compression.ipynb  ddp_qwen3_example.py  quantize_and_pack_int4.ipynb  weight_transform.py
experimental/: README.md  llama3_attention.py
gptq-torch-compile-benchmark/: README.md  benchmark_gptq_compile.py  benchmark_utils.py  run_benchmark.sh
main/: 404.html  index.html  objects.inv  sitemap.xml
test_output/: recipe.yaml
testing/: extract_log_summary.py  llama3_awq.py  llama3_fp8_block.py  llama3_w4a16_gptq.py  llama3_w8a16_gptq.py  llama4_scout_fp8_block.py  mixtral_fp8_block.py  qwen25_32b_fp8_block.py  qwen3_vl_fp8_block.py  run_all_tests.sh  run_all_tests_fp8.sh  run_all_tests_w4a16.sh
tests/: conftest.py  custom_test.py  data.py  emulate_device.py  mock_observer.py  pytest-xpu.ini  run_oneshot_ddp.py  test_bitmask.py  test_int_quant.py  test_registries.py  test_registry.py  testing_utils.py
tools/: collect_env.py  lint_cuda.py  repro_xpu_xccl_allreduce.py
utils/: analyse_model_by_safetensors.py  artifacts.py  copyright.py  load_and_analyse_model.ipynb  version_extractor.py
(+2369 files in other folders)
